; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl_verify.c_set_common_name.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl_verify.c_set_common_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tls_session = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tls_session*, i8*)* @set_common_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_common_name(%struct.tls_session* %0, i8* %1) #0 {
  %3 = alloca %struct.tls_session*, align 8
  %4 = alloca i8*, align 8
  store %struct.tls_session* %0, %struct.tls_session** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.tls_session*, %struct.tls_session** %3, align 8
  %6 = getelementptr inbounds %struct.tls_session, %struct.tls_session* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load %struct.tls_session*, %struct.tls_session** %3, align 8
  %11 = getelementptr inbounds %struct.tls_session, %struct.tls_session* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = call i32 @free(i32* %12)
  %14 = load %struct.tls_session*, %struct.tls_session** %3, align 8
  %15 = getelementptr inbounds %struct.tls_session, %struct.tls_session* %14, i32 0, i32 1
  store i32* null, i32** %15, align 8
  br label %16

16:                                               ; preds = %9, %2
  %17 = load i8*, i8** %4, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = load i8*, i8** %4, align 8
  %21 = call i32* @string_alloc(i8* %20, i32* null)
  %22 = load %struct.tls_session*, %struct.tls_session** %3, align 8
  %23 = getelementptr inbounds %struct.tls_session, %struct.tls_session* %22, i32 0, i32 1
  store i32* %21, i32** %23, align 8
  br label %24

24:                                               ; preds = %19, %16
  ret void
}

declare dso_local i32 @free(i32*) #1

declare dso_local i32* @string_alloc(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
